--- a/style.css
+++ b/style.css
@@ -107,3 +107,16 @@ footer {
   padding: 30px;
   text-align: center;
 }
+
+.compound-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  align-items: center;
+  gap: 20px;
+  padding: 40px 20px;
+}
+
+.compound-image img {
+  width: 100%;
+  border-radius: 10px;
+}
